Developing website structure (2)

--- a/index.html
+++ b/index.html
@@ -12,36 +12,49 @@
 </head>
 
 <body>
-    <img src="images/pexels-anna-nekrashevich-6801648-edited-by-pixlr.jpg" alt="Time Series of Food and Energy Prices">
+    <!-- <img src="images/pexels-anna-nekrashevich-6801648-edited-by-pixlr.jpg" alt="Time Series of Food and Energy Prices"> -->
     <div class="container">
         <header>
-            <h1>Master of Food and Resource Economics (MFRE) | Blue link to UBC</h1>
-            <h2>Companion Website of James Vercammen's (Blue link to UBC) "Time Series Analysis of Food and Energy
-                Prices" Textbook</h2>
+            <h1>Master of Food and Resource Economics
+                <a class="link1" href="https://mfre.landfood.ubc.ca/" target="_blank">(MFRE)</a>
+            </h1>
+
+            <h2>
+                Companion Website of
+            </h2>
+
+            <h2>
+                <a class="link2" href="https://www.sauder.ubc.ca/people/james-vercammen" target="_blank">James
+                    Vercammen</a>'s
+                "Time Series Analysis of Food and Energy Prices" Textbook
+            </h2>
         </header>
 
         <section>
-            <article>
-                <p>article 1</p>
-            </article>
 
-            <article>
-                <p>article 2</p>
-            </article>
+            <nav>
+                <a class="nav-text" href="#" target="_blank">Data Preparation (Chapter 3)</a>
+                <a class="nav-text" href="#" target="_blank">Raw data files</a>
+            </nav>
 
-            <article>
-                <p>article 3</p>
-            </article>
+            <nav>
+                <a class="nav-text" href="#" target="_blank">RDS data files</a>
+                <a class="nav-text" href="#" target="_blank">Hidden Code</a>
+            </nav>
 
-            <article>
-                <p>article 4</p>
-            </article>
+            <nav>
+                <a class="nav-text">
+                    <a class="a-link" href="https://github.com/vercammen" target="_blank">GitHub</a>
+                </a>
+            </nav>
 
         </section>
 
         <footer>
-            <p class="footer-text">Developed by Sajad Rahimian [Blue, link to linkedIn], GitHub [Blue link to prof vercammen GitHub], (stick
-                to the bottom of screen)</p>
+            <p class="footer-text">Developed by
+                <a class="footer-link" href="linkedin.com/in/sajad-rahimian" target="_blank">Sajad Rahimian</a>
+                <!-- stick to the bottom of screen -->
+            </p>
         </footer>
     </div>
 
