Developing website structure (3)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </h2>
         </header>
 
-        <section>
+        <main>
 
             <nav>
                 <a class="nav-text" href="#" target="_blank">Data Preparation (Chapter 3)</a>
@@ -48,7 +48,7 @@
                 </a>
             </nav>
 
-        </section>
+        </main>
 
         <footer>
             <p class="footer-text">Developed by
