Developing website structure (4)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <header>
             <h1>Master of Food and Resource Economics
-                <a class="link1" href="https://mfre.landfood.ubc.ca/" target="_blank">(MFRE)</a>
+                <a href="https://mfre.landfood.ubc.ca/" target="_blank">(MFRE)</a>
             </h1>
 
             <h2>
@@ -24,7 +24,7 @@
             </h2>
 
             <h2>
-                <a class="link2" href="https://www.sauder.ubc.ca/people/james-vercammen" target="_blank">James
+                <a href="https://www.sauder.ubc.ca/people/james-vercammen" target="_blank">James
                     Vercammen</a>'s
                 "Time Series Analysis of Food and Energy Prices" Textbook
             </h2>
@@ -32,26 +32,50 @@
 
         <main>
 
-            <nav>
-                <a class="nav-text" href="#" target="_blank">Data Preparation (Chapter 3)</a>
-                <a class="nav-text" href="#" target="_blank">Raw data files</a>
-            </nav>
+            <div class="box1">
+                <div class="box2">
+                    <nav>
+                        <a href="#" target="_blank">Data Preparation (Chapter 3)</a>
+                    </nav>
+                </div>
+                <div class="box3">
+                    
+                </div>
+                <div class="box2">
+                    <nav>
+                        <a href="#" target="_blank">Raw Data Files</a>
+                    </nav>
+                </div>
+            </div>
 
-            <nav>
-                <a class="nav-text" href="#" target="_blank">RDS data files</a>
-                <a class="nav-text" href="#" target="_blank">Hidden Code</a>
-            </nav>
+            <div class="box1">
+                <div class="box2">
+                    <nav>
+                        <a href="#" target="_blank">RDS Data Files</a>
+                    </nav>
+                </div>
+                <div class="box3">
 
-            <nav>
-                <a class="nav-text">
-                    <a class="a-link" href="https://github.com/vercammen" target="_blank">GitHub</a>
-                </a>
-            </nav>
+                </div>
+                <div class="box2">
+                    <nav>
+                        <a href="#" target="_blank">Hidden Code</a>
+                    </nav>
+                </div>
+            </div>
+
+            <div class="box1">
+                <div class="box4">
+                    <nav>
+                        <a class="a-link" href="https://github.com/vercammen" target="_blank">GitHub</a>
+                    </nav>
+                </div>
+            </div>
 
         </main>
 
         <footer>
-            <p class="footer-text">Developed by
+            <p>Developed by
                 <a class="footer-link" href="linkedin.com/in/sajad-rahimian" target="_blank">Sajad Rahimian</a>
                 <!-- stick to the bottom of screen -->
             </p>
