--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <footer>
             <p>Developed by
-                <a class="footer-link" href="linkedin.com/in/sajad-rahimian" target="_blank">Sajad Rahimian</a>
+                <a class="footer-link" href="https://github.com/sazh1" target="_blank">Sajad Rahimian</a>
                 <!-- stick to the bottom of screen -->
             </p>
         </footer>
